--- a/app/src/main/res/drawable/white_theme_gradient.xml
+++ b/app/src/main/res/drawable/white_theme_gradient.xml
@@ -3,6 +3,8 @@
 
     <item>
         <shape>
+            <stroke android:width="2dp"/>
+            <corners android:radius="15dp"/>
             <gradient android:angle="90" android:startColor="@color/yellow" android:endColor="@color/orange" android:type="linear"/>
         </shape>
     </item>
