--- a/app/src/main/res/layout/activity_today_weather_listitem.xml
+++ b/app/src/main/res/layout/activity_today_weather_listitem.xml
@@ -5,11 +5,12 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="1dp">
+
     <androidx.cardview.widget.CardView
-        android:layout_width="130dp"
-        android:layout_height="90dp"
-        app:cardCornerRadius="6dp"
-        android:layout_centerInParent="true">
+        android:layout_width="180dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        app:cardCornerRadius="6dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -17,9 +18,9 @@
             android:background="@color/moon">
 
             <ImageView
-                android:id="@+id/weatherPick"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+                android:id="@+id/todayWeather"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_alignParentStart="false"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
@@ -30,45 +31,46 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/future_time"
-                android:layout_width="55dp"
-                android:layout_height="35dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
+                android:id="@+id/todayTime"
+                android:layout_width="80dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:gravity="center"
                 android:text="Mon"
-                android:textColor="@color/white"
+                android:textColor="@color/light_blue_900"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/weatherPick"
+                app:layout_constraintHorizontal_bias="0.9"
+                app:layout_constraintStart_toEndOf="@+id/todayWeather"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/temp"
-                android:layout_width="40dp"
+                android:id="@+id/todayTemp"
+                android:layout_width="70dp"
                 android:layout_height="35dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="20dp"
                 android:gravity="end"
                 android:text="10"
+                android:textAlignment="textEnd"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/weatherPick"
-                app:layout_constraintTop_toBottomOf="@+id/future_time" />
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/todayWeather"
+                app:layout_constraintTop_toBottomOf="@+id/todayTime" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:gravity="start"
                 android:text="o"
+                android:textAlignment="textStart"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/temp"
-                app:layout_constraintTop_toBottomOf="@+id/future_time" />
+                app:layout_constraintStart_toEndOf="@+id/todayTemp"
+                app:layout_constraintTop_toBottomOf="@+id/todayTime" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
